code adjustments according to k8 deployment.

--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -1,19 +1,11 @@
 spring.application.name=ProductService
-spring.kafka.producer.bootstrap-servers=localhost:9092,localhost:9094
-spring.kafka.producer.acks=all
-#spring.kafka.producer.retries=10
-#spring.kafka.producer.properties.retry.backoff.ms=1000
-spring.kafka.producer.properties.delivery.timeout.ms=120000
-spring.kafka.producer.properties.linger.ms=0
-spring.kafka.producer.properties.request.timeout.ms=30000
-spring.kafka.producer.transaction-id-prefix=transfer-service-${random.value}-
-consumer.group-id=order-saga-product-events
-spring.kafka.consumer.properties.spring.json.trusted.packages=com.kafka.microservices.common
-spring.kafka.consumer.isolation-level=READ_COMMITTED
+# In-memory DB for local/build
+spring.datasource.url=jdbc:h2:mem:bootstrapdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.datasource.username=products_service
-spring.datasource.password=password
-spring.datasource.url=jdbc:mysql://localhost:3306/productsservice?useUnicode=true&characterEncoding=UTF-8
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+product.datafile=/app/data/products.json
