--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<module>notificationservice</module>
 		<module>order-service</module>
 		<module>payment-service</module>
+		<module>ws-gateway</module>
 	</modules>
 	<url/>
 	<licenses>
