--- a/payment-service/Dockerfile
+++ b/payment-service/Dockerfile
@@ -1,6 +1,18 @@
-FROM eclipse-temurin:17-jdk-jammy
+# Stage 1: Build the application
+FROM maven:3.9.4-eclipse-temurin-17 AS build
 
 WORKDIR /app
-COPY target/payment-service-*.jar app.jar
+COPY . .
+RUN mvn clean package -DskipTests
 
-CMD ["java", "-jar", "/app/app.jar"]
+# Stage 2: Create a lightweight runtime image
+FROM eclipse-temurin:17-jre-alpine
+
+WORKDIR /app
+COPY --from=build /app/payment-service/target/*.jar app3.jar
+
+# Use a non-root user for security
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+USER appuser
+
+CMD ["java", "-jar", "/app/app3.jar"]
