--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           echo "::group::Running OrderServiceApplicationTests..."
           set -e
-          ./mvnw clean test -pl order-service -am -Dtest=OrderServiceApplicationTests
+          ./mvnw clean test -pl order-service -Dtest=OrderServiceApplicationTests
           echo "::endgroup::"
           echo "::notice::✅ OrderService health test passed!"
 
